--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-immutable-proptypes": "^2.2.0",
     "react-markdown": "^4.2.2",
     "react-redux": "^7.1.3",
+    "react-speech-recognition": "^2.0.4",
     "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
     "socket.io": "^2.2.0",
@@ -64,7 +65,7 @@
     "husky": "^3.0.7",
     "jest": "^25.5.4",
     "lodash-webpack-plugin": "^0.11.5",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prettier": "^1.18.2",
     "prettier-eslint": "^5.1.0",
     "react": "^16.12.0",
