--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "react-markdown": "^4.2.2",
     "react-popper": "^2.2.3",
     "react-redux": "^7.1.3",
-    "react-speech-recognition": "^2.0.4",
     "react-slick": "^0.26.1",
+    "react-speech-recognition": "^2.0.4",
     "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "sockjs-client": "^1.4.0"
+    "sockjs-client": "^1.4.0",
+    "video-react": "^0.14.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
