--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "sockjs-client": "^1.4.0",
-    "video-react": "^0.14.1"
+    "sockjs-client": "^1.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
